--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         <section id="home-page" class="page active">
             <div class="jumbotron text-center">
                 <h1 class="display-4">Welcome to Full-Stack App</h1>
-                <p class="lead">A role-based single-page application prototype</p>
+                <p class="lead">• A static prototype + fake verification</p>
+                <p class="lead">• login with JWT-like token simulation</p>
+                <p class="lead">• Role-based UI(Admin/User)</p>
+                <p class="lead">• CRUD for Employees, Departments, Requests</p>
                 <hr class="my-4">
                 <p class="role-logged-out">Please <a href="#/login">login</a> or <a href="#/register">register</a> to continue.</p>
                 <p class="role-logged-in">You are logged in! Use the navigation above to explore.</p>
